feat: добавлен spring в проект
update: Использовал необходимые модули spring(boot, web, data etc).
        Реализовал api для получения, создания, обновления и удаления юзера.
        Добавил dto и mapper.

        Заменил Hibernate на Spring data JPA.

        Написал тесты для API(Controller + Service)